--- a/design4green/home_page/static/css/home_page_style.css
+++ b/design4green/home_page/static/css/home_page_style.css
@@ -1,2 +1,18 @@
 body {background-color: white;}
 
+hr {
+    border: none;
+    border-top: 3px double #333;
+    color: #333;
+    overflow: visible;
+    text-align: center;
+    height: 5px;
+}
+
+hr:after {
+    background: #fff;
+    content: '§';
+    padding: 0 4px;
+    position: relative;
+    top: -13px;
+}
