--- a/design4green/home_page/static/css/home_page_style.css
+++ b/design4green/home_page/static/css/home_page_style.css
@@ -18,11 +18,8 @@ hr:after {
 }
 
 .hrvertical {
-    clear: both;
-    position: absolute;
-    margin-top :10px;
-    margin-left: 250px;
-    height: 200px;
-    width : 5px;
-    background: black;
+    border:         none;
+    border-left:    1px solid hsla(200, 10%, 50%,100);
+    height:         100vh;
+    width:          1px;
 }
