--- a/design4green/home_page/templates/about/about.html
+++ b/design4green/home_page/templates/about/about.html
@@ -21,8 +21,15 @@
 
             <div class="row">
                 <div class="col-sm ud-cp">
-                    <h4 class="text-center">Votre compte</h4>
-                    <p>Nous sommes une petite équipe récemment créée, de base un groupe d'amis dévoué à la protection de la terre et à la préservation de mère nature.</p>
+                    <br>
+                    <p>Nous sommes une petite équipe récemment créée, de base un groupe d'amis dévoué à la protection de la terre et à la préservation de mère nature.
+					<br>
+					Nos objectifs sont de luter contre le gaspillage, le réchauffement climatique et la polution !
+					Nous désirons partager nos connaissances et faire réaliser qu'un simple geste peut grandement prolonger notre terre et ses créatures.
+					<br>
+					Nous avons la firme intension de continuer dans cette voie et grandir pas à pas juqu'à devenir un pilier dans le domain Green</p>
+					<br>
+					<img src="{% static "images/logo_old.jpg" %}" alt="logo"/>
                 </div>
             </div>
         </div>
