--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -19,10 +19,10 @@
                 <a class="nav-link" href="#">Accueil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="about">Nous</a>
+                <a class="nav-link" href="/about">Nous</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="help">Aide</a>
+                <a class="nav-link" href="/help">Aide</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Deconnexion</a>
