--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -24,7 +24,7 @@
                 <div class="col-sm ud-cp">
                     <h4 class="text-center">Votre compte</h4>
                     <p>Votre compte : {{ user.u_id }}</p>
-                    <p>Votre nom: {{ h_name }}</p>
+                    <p>Votre nom: {{ h_name.h_nom }}</p>
                 </div>
 
                 <hr class="hrvertical">
