--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -25,6 +25,7 @@
                     <h4 class="text-center">Votre compte</h4>
                     <p>Votre compte : {{ user.u_id }}</p>
                     <p>Votre nom: {{ h_name.h_nom }}</p>
+                    <p>Votre prenom: {{ h_name.h_prenom }}</p>
                 </div>
 
                 <hr class="hrvertical">
