--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -16,7 +16,7 @@
    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'homePage:u_details' user.id %}">Accueil</a>
+                <a class="nav-link" href="{% url 'homePage:user_details' user.id %}">Accueil</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'homePage:about' %}">Nous</a>
