--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -51,6 +51,8 @@
                             {% for item in all_conso %}
                             <tr>
                                 <td>{{ item.c_cons }}</td>
+                                <td>{{ item.c_date }}</td>
+                                <td>{{ item.c_log }}</td>
                             </tr>
                             {% endfor %}
                         </tbody>
