--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -28,7 +28,7 @@
     var myChart = new Chart(ctx, {
         type: 'line',
         data: {
-            labels: ["01/01/2019", "02/01/2019", "03/01/2019", "04/01/2019", "05/01/2019", "06/01/2019", "07/01/2019", "08/01/2019", "09/01/2019", "10/01/2019", "11/01/2019", "12/01/2019", "13/01/2019", "14/01/2019"],
+            labels: ['01/01/2019', '02/01/2019', '03/01/2019', '04/01/2019', '05/01/2019', '06/01/2019', '07/01/2019', '08/01/2019', '09/01/2019', '10/01/2019', '11/01/2019', '12/01/2019', '13/01/2019', '14/01/2019'],
             datasets: [{
                 label: 'Votre consommation',
                 backgroundColor: 'rgba(22, 180, 38, 0.3)',
